--- a/client/src/views/index/style.scss
+++ b/client/src/views/index/style.scss
@@ -1,8 +1,10 @@
 @charset "utf-8";
 
+body {
+  background: #f7f9fc;
+}
+
 .view-index {
-  ul {
-    border: 1px solid #eaeaea;
-    width: 300px;
-  }
+
+
 }
