--- a/client/src/containers/asideUserList/style.scss
+++ b/client/src/containers/asideUserList/style.scss
@@ -1,5 +1,15 @@
 @charset "utf-8";
 
 .aside-user-list {
-
+  .user-list {
+    overflow: hidden;
+    padding: 15px 0 5px 15px;
+    .user-header {
+      margin: 0 14px 10px 0;
+      float: left;
+      width: 48px;
+      height: 48px;
+      line-height: 48px;
+    }
+  }
 }
