--- a/client/src/views/index/style.scss
+++ b/client/src/views/index/style.scss
@@ -5,6 +5,12 @@ body {
 }
 
 .view-index {
-
-
+  .daily-writer {
+    border: 1px solid #dee3e8;
+    background: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    border-radius: 4px;
+    margin-bottom: 15px;
+    padding: 15px;
+  }
 }
