--- a/client/src/containers/asideUserList/style.scss
+++ b/client/src/containers/asideUserList/style.scss
@@ -12,4 +12,10 @@
       line-height: 48px;
     }
   }
+  .empty {
+    text-align: center;
+    padding: 30px 15px 60px 0;
+    font-size: 12px;
+    color: #ddd;
+  }
 }
