--- a/client/src/containers/wrapper/style.scss
+++ b/client/src/containers/wrapper/style.scss
@@ -51,7 +51,8 @@ body {
           position: absolute;
           left: 50%;
           top: 54px;
-          margin-left: -18px
+          margin-left: -18px;
+          border-radius: 2px;
         }
       }
     }
