--- a/client/src/assets/css/reset.css
+++ b/client/src/assets/css/reset.css
@@ -61,3 +61,16 @@ a {
   text-decoration: none;
   outline: none;
 }
+
+.clearfix:before, .clearfix:after {
+  content: "\0020";
+  display: block;
+  height: 0;
+  overflow: hidden
+}
+.clearfix:after {
+  clear: both
+}
+.clearfix {
+  zoom: 1
+}
