--- a/client/src/components/button/style.scss
+++ b/client/src/components/button/style.scss
@@ -30,9 +30,9 @@
   }
   &.light {
     color: #5081ff;
-    background: #f7f9fc - 2;
+    background: #f7f9fc;
     &:hover {
-      background: #f7f9fc - 7;
+      background: #f7f9fc - 5;
     }
   }
 }
