--- a/client/src/components/missionItem/style.scss
+++ b/client/src/components/missionItem/style.scss
@@ -16,10 +16,21 @@
     margin-bottom: 5px;
   }
   > time, .project {
-    display: block;
+    display: flex;
+    align-items: center;
     color: #8a929b;
     font-size: 12px;
     line-height: 1.5;
+  }
+  > time strong {
+    display: block;
+    font-size: 12px;
+    line-height: 1;
+    padding: 4px;
+    color: #fff;
+    border-radius: 3px;
+    background: #eb7350;
+    transform: scale(0.8);
   }
   .progress {
     position: absolute;
@@ -42,7 +53,7 @@
       color: #33b400;
     }
   }
-  .tools {
+  > .tools {
     display: flex;
     flex-wrap: nowrap;
     position: absolute;
@@ -74,6 +85,123 @@
         font-size: 12px;
         color: #586069 + 100;
         flex: 1;
+      }
+    }
+  }
+}
+
+.dialog-project-rule {
+  .main-dialog__content {
+    width: 600px;
+    overflow: hidden;
+    margin: 0 0 0 -300px;
+  }
+  header {
+    display: flex;
+    margin-bottom: 5px;
+    a {
+      display: block;
+      width: 20px;
+      height: 20px;
+      background: #dee3e8;
+    }
+  }
+  h1 {
+    flex: 1;
+    color: #000;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.5;
+  }
+  .info {
+    line-height: 1.5;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    color: #586069;
+    font-size: 14px;
+    border-bottom: 1px dashed #dee3e8;
+  }
+  .rule {
+    p {
+      background: #f7f9fc;
+      padding: 10px;
+      border-radius: 4px;
+      color: #586069;
+      font-size: 14px;
+      line-height: 1.5;
+      word-wrap: break-word;
+      max-height: 300px;
+      overflow: auto;
+    }
+  }
+  h3 {
+    color: #000;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 1.5;
+    margin-bottom: 5px;
+  }
+}
+
+.dialog-mission-rule {
+  .main-dialog__content {
+    width: 600px;
+    overflow: hidden;
+    margin: 0 0 0 -300px;
+  }
+  header {
+    display: flex;
+    margin-bottom: 5px;
+    a {
+      display: block;
+      width: 20px;
+      height: 20px;
+      background: #dee3e8;
+    }
+  }
+  h1 {
+    flex: 1;
+    color: #000;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.5;
+  }
+  .info {
+    line-height: 1.5;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    color: #586069;
+    font-size: 14px;
+    border-bottom: 1px dashed #dee3e8;
+  }
+  .rule {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px dashed #dee3e8;
+    p {
+      background: #f7f9fc;
+      padding: 10px;
+      border-radius: 4px;
+      color: #586069;
+      font-size: 14px;
+      line-height: 1.5;
+      word-wrap: break-word;
+      max-height: 300px;
+      overflow: auto;
+    }
+  }
+  h3 {
+    color: #000;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 1.5;
+    margin-bottom: 5px;
+  }
+  .all-users {
+    .list {
+      display: flex;
+      .user-header {
+        margin-right: 10px;
       }
     }
   }
