--- a/client/src/components/projectItem/style.scss
+++ b/client/src/components/projectItem/style.scss
@@ -55,4 +55,25 @@
     left: 10px;
     bottom: 10px;
   }
+  .progress {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 40px;
+    height: 40px;
+    background: #5081ff;
+    border-radius: 50%;
+    padding: 3px;
+    span {
+      display: block;
+      width: 34px;
+      height: 34px;
+      background: #fff;
+      border-radius: 50%;
+      line-height: 34px;
+      text-align: center;
+      font-size: 12px;
+      color: #5081ff;
+    }
+  }
 }
