--- a/client/src/containers/mainDialog/style.scss
+++ b/client/src/containers/mainDialog/style.scss
@@ -1,19 +1,19 @@
 
 .main-dialog__content {
   background: #fff;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 200px;
   padding: 15px;
-  transition: all 0.2s ease-out;
+  transition: all 0.15s ease-out;
   opacity: 0;
-  transform: translate(-50%, -50%) scale(0.8);
+  transform: scale(0.95);
   border-radius: 5px;
   min-width: 400px;
   min-height: 200px;
   &.main-dialog--in {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    transform: scale(1);
   }
 }
