--- a/client/src/containers/asideDialog/style.scss
+++ b/client/src/containers/asideDialog/style.scss
@@ -1,7 +1,7 @@
 
 .aside-dialog__content {
   background: #fff;
-  box-shadow: -1px 0 3px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 0 35px rgba(0,39,61,.05);
   position: absolute;
   right: 0;
   top: 0;
