--- a/client/src/components/input/style.scss
+++ b/client/src/components/input/style.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.x-input {
+.wb-input {
   display: block;
   width: 100%;
   border: 1px solid #dee3e8 !important;
@@ -21,7 +21,7 @@
   }
 }
 
-textarea.x-input {
+textarea.wb-input {
   height: 80px;
   padding: 10px;
 }
