--- a/client/src/views/consoleUserList/style.scss
+++ b/client/src/views/consoleUserList/style.scss
@@ -24,8 +24,16 @@
       width: 200px;
       text-align: center;
     }
-    td:last-child {
+    td:nth-child(6) {
+      width: 100px;
+      text-align: center;
+    }
+    td:nth-child(7) {
       width: 200px;
+      text-align: center;
+    }
+    td:last-child {
+      width: 150px;
       text-align: center;
     }
   }
