--- a/client/src/views/consoleDepartmentList/style.scss
+++ b/client/src/views/consoleDepartmentList/style.scss
@@ -17,15 +17,16 @@
       width: 120px;
       text-align: center;
     }
-    td:nth-child(2), td:nth-child(3) {
-      width: 200px;
+    td:nth-child(3) {
+      width: 100px;
+      text-align: center;
     }
-    td:nth-child(5) {
+    td:nth-child(4) {
       width: 200px;
       text-align: center;
     }
     td:last-child {
-      width: 200px;
+      width: 150px;
       text-align: center;
     }
   }
