--- a/client/src/assets/css/reset.scss
+++ b/client/src/assets/css/reset.scss
@@ -94,6 +94,9 @@ a {
     &:hover {
       background: #fffff1;
     }
+    td {
+      font-size: 13px;
+    }
   }
   td {
     padding: 15px 10px;
