--- a/client/src/containers/dialog/style.scss
+++ b/client/src/containers/dialog/style.scss
@@ -22,11 +22,15 @@
     }
   }
   &__content {
+    pointer-events: none;
     position: absolute;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
     z-index: 2;
+    > div {
+      pointer-events: auto;
+    }
   }
 }
