--- a/client/src/views/consoleProject/style.scss
+++ b/client/src/views/consoleProject/style.scss
@@ -8,7 +8,7 @@
       flex: 1;
       font-size: 20px;
       line-height: 1.5;
-      color: #586069;
+      color: #222;
       font-weight: bold;
     }
   }
@@ -21,24 +21,16 @@
         margin-bottom: 0;
       }
       > div {
-        display: block;
-        width: 100%;
         flex: 1;
         margin-right: 10px;
-        padding: 10px;
         &:last-child {
           margin-right: 0;
+        }
+        &.space {
+          padding: 10px;
         }
       }
     }
   }
 }
 
-.dialog-console-edit-project {
-  .wb-form {
-    padding-bottom: 20px;
-    .wb-select {
-      max-width: 100%;
-    }
-  }
-}
