--- a/client/src/components/select/style.scss
+++ b/client/src/components/select/style.scss
@@ -12,15 +12,90 @@
     font-size: 14px;
     color: #586069;
     width: 100%;
-    height: 40px;
+    height: 38px;
     display: flex;
     align-items: center;
-    padding: 5px 10px;
-    &:empty {
-      &:before {
-        color: #a8b0b9;
-        content: '请选择';
+    padding: 5px 30px 5px 10px;
+    position: relative;
+    sup {
+      color: #a8b0b9;
+    }
+  }
+  &--multi {
+    min-height: 40px;
+    height: auto;
+  }
+  &__values {
+    font-size: 14px;
+    color: #586069;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 5px 30px 0 5px;
+    min-height: 33px;
+    position: relative;
+    .bg {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+    }
+    span {
+      border: 1px solid #ebedf0;
+      background: #f7f9fc;
+      display: block;
+      height: 28px;
+      line-height: 28px;
+      font-size: 12px;
+      margin: 0 5px 5px 0;
+      padding: 0 24px 0 10px;
+      border-radius: 3px;
+      overflow: hidden;
+      position: relative;
+      z-index: 2;
+      a {
+        display: block;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        right: 2px;
+        top: 4px;
+        padding: 4px;
+        svg {
+          width: 12px;
+          height: 12px;
+          display: block;
+          fill: #a8b0b9;
+        }
+        &:hover {
+          svg {
+            fill: #5081ff;
+          }
+        }
       }
+    }
+    > sup {
+      color: #a8b0b9;
+      padding: 0 5px;
+    }
+  }
+  .wb-select__down {
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: -5px;
+    fill: #a8b0b9;
+    transition: all 0.15s ease-out;
+  }
+  &--opened {
+    border: 1px solid #5081ff !important;
+    box-shadow: 0 0 5px rgba(80, 129, 255, 0.3);
+    .wb-select__down {
+      transform: rotate(180deg);
     }
   }
   &__list {
@@ -28,7 +103,8 @@
     z-index: 999999;
     left: -1px;
     right: -1px;
-    top: 42px;
+    top: 100%;
+    margin-top: 3px;
     background: #fff;
     border-radius: 3px;
     border: 1px solid #dee3e8;
@@ -42,6 +118,18 @@
       color: #586069;
       padding: 10px;
       border-radius: 3px;
+      position: relative;
+      svg {
+        position: absolute;
+        fill: #5081ff;
+        right: 10px;
+        top: 50%;
+        width: 14px;
+        height: 14px;
+        margin-top: -7px;
+        pointer-events: none;
+        display: block;
+      }
       &:hover {
         color: #5081ff;
         background: #f7f9fc;
