--- a/client/src/containers/mainDialog/style.scss
+++ b/client/src/containers/mainDialog/style.scss
@@ -35,7 +35,16 @@
       display: block;
       width: 20px;
       height: 20px;
-      background: #586069;
+      padding: 3px;
+      svg {
+        display: block;
+        width: 14px;
+        height: 14px;
+        fill: #586069;
+      }
+      &:hover svg {
+        fill: #5081ff;
+      }
     }
   }
   .main-dialog__body {
